[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/3d_aerofoil_scene.gd" type="Script" id=1]
[ext_resource path="res://scripts/gimbal.gd" type="Script" id=2]
[ext_resource path="res://hub_mesh.obj" type="ArrayMesh" id=3]
[ext_resource path="res://scripts/hub.gd" type="Script" id=4]
[ext_resource path="res://textures/back_icon.png" type="Texture" id=5]
[ext_resource path="res://scripts/back_button.gd" type="Script" id=6]
[ext_resource path="res://scenes/FPS.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/button_screenshot.tscn" type="PackedScene" id=8]
[ext_resource path="res://textures/rotate_icon.png" type="Texture" id=9]
[ext_resource path="res://textures/green_square.png" type="Texture" id=10]


[sub_resource type="Environment" id=1]
background_mode = 1
background_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
ambient_light_color = Color( 0.0745098, 0.0745098, 0.0745098, 1 )

[sub_resource type="PlaneMesh" id=2]

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="gimbal" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 12.3103, 0 )
script = ExtResource( 2 )

[node name="Camera" type="Camera" parent="gimbal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -6.68308, 52.4311 )
far = 2000.0

[node name="single_blade_parent" type="Spatial" parent="."]

[node name="hub" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 12.3103, 0 )
mesh = ExtResource( 3 )
material/0 = null
script = ExtResource( 4 )

[node name="rot_speed_slider" type="VBoxContainer" parent="."]
editor/display_folded = true
margin_left = 465.312
margin_top = 543.309
margin_right = 599.312
margin_bottom = 594.309
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="rot_speed_slider"]
margin_right = 134.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Rotational
speed (rad/s)"
align = 1

[node name="slider" type="HSlider" parent="rot_speed_slider"]
margin_top = 35.0
margin_right = 134.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 20.0
step = 0.1
value = 1.0
ticks_on_borders = true

[node name="button_back" type="Button" parent="."]
margin_top = 560.128
margin_right = 80.0
margin_bottom = 598.128
text = "BACK"
icon = ExtResource( 5 )
script = ExtResource( 6 )

[node name="rotate_zoom_info" type="RichTextLabel" parent="."]
margin_right = 155.0
margin_bottom = 37.0
text = "Roll middle mouse to zoom in/out."

[node name="title" type="RichTextLabel" parent="."]
margin_left = 420.0
margin_right = 533.0
margin_bottom = 15.0
rect_scale = Vector2( 2, 2 )
text = "3D MESH VIEWER"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="lights" type="OmniLight" parent="."]
editor/display_folded = true
transform = Transform( 0.887159, 0, 0.461464, 0, 1, 0, -0.461464, 0, 0.887159, 10.529, 18.7035, 12.6959 )
light_color = Color( 0.831373, 0.552941, 0.329412, 1 )
light_energy = 0.66
shadow_color = Color( 0.47451, 0.47451, 0.47451, 1 )
omni_range = 20.0
omni_attenuation = 1.10957
omni_shadow_detail = 0

[node name="OmniLight2" type="OmniLight" parent="lights"]
transform = Transform( 0.374642, 0, -0.92717, 0, 1, 0, 0.92717, 0, 0.374642, -7.31051, 4.7165, -8.15896 )
light_color = Color( 0.831373, 0.552941, 0.329412, 1 )
light_energy = 0.66
shadow_color = Color( 0.47451, 0.47451, 0.47451, 1 )
omni_range = 59.1757
omni_attenuation = 1.10957

[node name="OmniLight4" type="OmniLight" parent="lights"]
transform = Transform( 0.374642, 0, -0.92717, 0, 1, 0, 0.92717, 0, 0.374642, -7.31051, 0.416, -8.15896 )
light_color = Color( 0.831373, 0.552941, 0.329412, 1 )
light_energy = 0.1
shadow_color = Color( 0.47451, 0.47451, 0.47451, 1 )
omni_range = 59.1757
omni_attenuation = 1.10957

[node name="OmniLight3" type="OmniLight" parent="lights"]
transform = Transform( -0.987381, 0, -0.158363, 0, 1, 0, 0.158363, 0, -0.987381, 1.77539, -0.7876, -14.3181 )
light_color = Color( 0.329412, 0.831373, 0.384314, 1 )
light_energy = 0.98
shadow_color = Color( 0.47451, 0.47451, 0.47451, 1 )
omni_range = 20.0
omni_attenuation = 1.10957

[node name="OmniLight5" type="OmniLight" parent="lights"]
transform = Transform( -0.987381, 0, -0.158363, 0, 1, 0, 0.158363, 0, -0.987381, 9.81122, -0.7876, -7.56283 )
light_color = Color( 0.329412, 0.737255, 0.831373, 1 )
light_energy = 0.4
shadow_color = Color( 0.47451, 0.47451, 0.47451, 1 )
omni_range = 20.0
omni_attenuation = 1.10957

[node name="SpotLight" type="SpotLight" parent="lights"]
transform = Transform( 0.887159, 0.258205, -0.382465, 0, 0.828808, 0.559534, 0.461464, -0.496395, 0.735284, -7.74832, -7.76546, 8.50285 )
light_color = Color( 0.54902, 0.776471, 0.843137, 1 )
shadow_enabled = true
shadow_bias = 3.93
spot_range = 328.162
spot_angle = 76.9368

[node name="lights2" type="OmniLight" parent="."]
editor/display_folded = true
transform = Transform( 0.887159, 0, 0.461464, 0, 1, 0, -0.461464, 0, 0.887159, -25.3814, 11.6488, 10.8067 )
light_color = Color( 0.831373, 0.552941, 0.329412, 1 )
light_energy = 0.66
shadow_color = Color( 0.47451, 0.47451, 0.47451, 1 )
omni_range = 20.0
omni_attenuation = 1.10957
omni_shadow_detail = 0

[node name="OmniLight2" type="OmniLight" parent="lights2"]
transform = Transform( 0.374642, 0, -0.92717, 0, 1, 0, 0.92717, 0, 0.374642, -7.31051, 4.7165, -8.15896 )
light_color = Color( 0.831373, 0.552941, 0.329412, 1 )
light_energy = 0.66
shadow_color = Color( 0.47451, 0.47451, 0.47451, 1 )
omni_range = 59.1757
omni_attenuation = 1.10957

[node name="OmniLight4" type="OmniLight" parent="lights2"]
transform = Transform( 0.374642, 0, -0.92717, 0, 1, 0, 0.92717, 0, 0.374642, -7.31051, 0.416, -8.15896 )
light_color = Color( 0.831373, 0.552941, 0.329412, 1 )
light_energy = 0.1
shadow_color = Color( 0.47451, 0.47451, 0.47451, 1 )
omni_range = 59.1757
omni_attenuation = 1.10957

[node name="OmniLight3" type="OmniLight" parent="lights2"]
transform = Transform( -0.987381, 0, -0.158363, 0, 1, 0, 0.158363, 0, -0.987381, 1.77539, -0.7876, -14.3181 )
light_color = Color( 0.329412, 0.831373, 0.384314, 1 )
light_energy = 0.98
shadow_color = Color( 0.47451, 0.47451, 0.47451, 1 )
omni_range = 20.0
omni_attenuation = 1.10957

[node name="OmniLight5" type="OmniLight" parent="lights2"]
transform = Transform( -0.987381, 0, -0.158363, 0, 1, 0, 0.158363, 0, -0.987381, 9.81122, -0.7876, -7.56283 )
light_color = Color( 0.329412, 0.737255, 0.831373, 1 )
light_energy = 0.4
shadow_color = Color( 0.47451, 0.47451, 0.47451, 1 )
omni_range = 20.0
omni_attenuation = 1.10957

[node name="FPS" parent="." instance=ExtResource( 7 )]

[node name="ground_plane" type="MeshInstance" parent="."]
transform = Transform( 2423.52, 0, 0, 0, 2423.52, 0, 0, 0, 2423.52, 0, -34.8263, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="slanted_plane" type="MeshInstance" parent="."]
transform = Transform( 2423.52, 0, 0, 0, 1320.27, -2032.32, 0, 2032.32, 1320.27, 0, -16.3812, -34.191 )
mesh = SubResource( 2 )
material/0 = null

[node name="button_panel" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 259.65
margin_right = 102.0
margin_bottom = 339.65

[node name="wireframe_checkbox" type="HBoxContainer" parent="button_panel"]
margin_right = 95.0
margin_bottom = 24.0

[node name="wireframe_checkbox" type="CheckBox" parent="button_panel/wireframe_checkbox"]
margin_right = 24.0
margin_bottom = 24.0
size_flags_vertical = 3
pressed = true

[node name="Label" type="Label" parent="button_panel/wireframe_checkbox"]
margin_left = 28.0
margin_right = 95.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Wireframe"
align = 1

[node name="solid_checkbox" type="HBoxContainer" parent="button_panel"]
margin_top = 28.0
margin_right = 95.0
margin_bottom = 52.0

[node name="solid_checkbox" type="CheckBox" parent="button_panel/solid_checkbox"]
margin_right = 24.0
margin_bottom = 24.0
size_flags_vertical = 3
pressed = true

[node name="Label2" type="Label" parent="button_panel/solid_checkbox"]
margin_left = 28.0
margin_right = 95.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Solid"

[node name="shadow_checkbox" type="HBoxContainer" parent="button_panel"]
margin_top = 56.0
margin_right = 95.0
margin_bottom = 80.0

[node name="shadow_checkbox" type="CheckBox" parent="button_panel/shadow_checkbox"]
margin_right = 24.0
margin_bottom = 24.0
size_flags_vertical = 3
pressed = true

[node name="Label" type="Label" parent="button_panel/shadow_checkbox"]
margin_left = 28.0
margin_right = 95.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Shadow"

[node name="button_screenshot" parent="." instance=ExtResource( 8 )]
margin_left = 892.347
margin_top = 1.50734
margin_right = 1020.35
margin_bottom = 39.5073

[node name="button_press_to_rot" type="Button" parent="."]
margin_left = 789.0
margin_top = 541.778
margin_right = 1021.0
margin_bottom = 595.778
text = "PRESS AND DRAG TO ROTATE"
icon = ExtResource( 9 )

[node name="mesh_selector" type="VBoxContainer" parent="."]
editor/display_folded = true
margin_left = 16.0
margin_top = 95.0
margin_right = 105.0
margin_bottom = 135.0

[node name="Label" type="Label" parent="mesh_selector"]
margin_right = 89.0
margin_bottom = 14.0
text = "Mesh Type"

[node name="OptionButton" type="OptionButton" parent="mesh_selector"]
margin_top = 18.0
margin_right = 89.0
margin_bottom = 38.0
text = "Turbine"
items = [ "Turbine", null, false, -1, null, "Single Blade", null, false, -1, null ]
selected = 0

[node name="zoom" type="VBoxContainer" parent="."]
editor/display_folded = true
visible = false
margin_left = 406.0
margin_top = 535.0
margin_right = 588.0
margin_bottom = 584.0

[node name="Label" type="Label" parent="zoom"]
margin_right = 182.0
margin_bottom = 14.0
text = "zoom in/out slider"
align = 1

[node name="zoom_slider" type="TextureButton" parent="zoom"]
margin_top = 18.0
margin_right = 182.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 10 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="zoom"]
margin_top = 35.0
margin_right = 182.0
margin_bottom = 49.0

[node name="-" type="Label" parent="zoom/HBoxContainer"]
margin_right = 89.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 2
text = "-"

[node name="+" type="Label" parent="zoom/HBoxContainer"]
margin_left = 93.0
margin_right = 182.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 2
text = "+"
align = 2

[node name="blade_AoA_rotation" type="HSlider" parent="."]
visible = false
margin_left = 171.2
margin_top = 554.15
margin_right = 315.2
margin_bottom = 586.15
min_value = -40.0
max_value = 40.0
step = 0.001
ticks_on_borders = true

[node name="description" type="RichTextLabel" parent="."]
visible = false
margin_left = 642.096
margin_top = 535.238
margin_right = 1027.1
margin_bottom = 597.238
text = "Description: this 3D mesh viewer works by extruding the 2D sketch (previously drawn or loaded in) along the vertical axis to form a 3D hollow mesh. The purpose of this is to allow better visualization of an aerofoil mesh."

[connection signal="pressed" from="button_back" to="button_back" method="_on_button_back_pressed"]
[connection signal="toggled" from="button_panel/wireframe_checkbox/wireframe_checkbox" to="." method="_on_wireframe_checkbox_toggled"]
[connection signal="toggled" from="button_panel/solid_checkbox/solid_checkbox" to="." method="_on_solid_checkbox_toggled"]
[connection signal="toggled" from="button_panel/shadow_checkbox/shadow_checkbox" to="." method="_on_shadow_checkbox_toggled"]
[connection signal="item_selected" from="mesh_selector/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="value_changed" from="blade_AoA_rotation" to="hub" method="_on_blade_AoA_rotation_value_changed"]
